src/test/fail/return_value_from_void_fail.egern
func square(n: int): void {
    return n * n
}

square(4)
